--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-scrollable-anchor": "^0.6.1",
     "reactstrap": "^8.4.1"
   },
   "scripts": {
