--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
     "react": "^16.13.1",
+    "react-calendar": "^3.0.1",
     "react-chartjs-2": "^2.9.0",
     "react-countup": "^4.3.3",
+    "react-datepicker": "^2.15.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "react-scrollable-anchor": "^0.6.1",
