--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@material-ui/core": "^4.9.13",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -11,8 +14,9 @@
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
+    "material-table": "^1.57.2",
+    "mdbreact": "^4.26.1",
     "react": "^16.13.1",
-    "react-calendar": "^3.0.1",
     "react-chartjs-2": "^2.9.0",
     "react-countup": "^4.3.3",
     "react-datepicker": "^2.15.0",
